--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Ragawender Sivanraj resume undergradute student at Faculty of Engineering University of Jaffna">
+  <meta name="author" content="Ragawender Sivanraj">
 
   <title>Resume - Ragavender Sivanraj</title>
 
