--- a/Ragavender Sivanraj.html
+++ b/Ragavender Sivanraj.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="ragawender sivanraj resume undergradute student at Faculty of Engineering University of Jaffna">
-  <meta name="author" content="ragawender sivanraj">
+  <meta name="description" content="ragawender sivanraj resume undergradute student at Faculty of Engineering University of Jaffna ragavender sivanraj">
+  <meta name="author" content="ragawender sivanraj ragavender sivanraj">
 
   <title>Resume - Ragavender Sivanraj</title>
 
